--- a/PetLover/style.css
+++ b/PetLover/style.css
@@ -57,7 +57,7 @@ body{
     height: 80px;
 }
 .title{
-    margin-left: 35px;
+    margin-left: 70px;
     
 }
 .title h1{
@@ -71,7 +71,7 @@ body{
 
 .basic__details{
     display: flex;
-    margin-right:35px ;
+    margin-right:50px ;
    
 }
 .basic__detail{
@@ -87,4 +87,59 @@ body{
 }
 .basic__detail p{
     color: #777777;
+}
+.main__header{
+    /* border:1px solid red ; */
+    margin-top: 85px;
+}
+
+.main__nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+    border: 1px solid rgb(2, 38, 59);
+    background: black;
+    
+}
+.main__nav-items{
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+    left: 16px;
+    list-style: none;
+}
+.main__nav-item{
+    font-size: 20px;
+    text-decoration: none;
+    padding-right: 42px;
+    color: rgba(255, 255, 255, 0.851);
+}
+.quote__btn{
+    position: relative;
+    right: 48px;
+    
+}
+.quote__btn button{
+    font-size: 22px;
+    color: rgba(255, 255, 255, 0.851);
+    background: #ED6436;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.main__heading{
+    border: 1px solid red;
+    text-align: center;
+    padding: 36px;
+    background: black;
+}
+.main__heading-subtitle{
+    font-size: 1.75rem;
+    color: #fff;
+}
+.main__heading-title{
+    color: #fff;
+}
+.main__heading-info{
+    color: #fff;
 }
