background image set,styling done,refactoring code

--- a/PetLover/style.css
+++ b/PetLover/style.css
@@ -124,22 +124,63 @@ body{
     color: rgba(255, 255, 255, 0.851);
     background: #ED6436;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+.quote__btn button:hover{
+    background:#f54e16;
 }
 
 .main__heading{
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    background-image: url('./images/carousel-2.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
     text-align: center;
     padding: 36px;
-    background: black;
+    height: 50rem;
+    width: 95.2%;
+}
+.main__heading-items{
+   position: relative;
+   top: 30%;
 }
 .main__heading-subtitle{
     font-size: 1.75rem;
     color: #fff;
+    margin-bottom: -33px;
 }
 .main__heading-title{
     color: #fff;
+    font-size: 4.5rem;
 }
 .main__heading-info{
+    color: #fff;
+    font-size: 1.25rem;
+    position: relative;
+    bottom: 32px;
+}
+.info__btn{
+    font-size: 20px;
+    padding: 16px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition-duration: 0.5s;
+}
+.book{
+    color: #fff;
+    background: #ED6436;
+}
+.book:hover{
+    background:#f54e16;
+}
+.learn__more{
+    background: #65C178;
+}
+.learn__more:hover{
     color: #fff;
 }
