--- a/PetLover/style.css
+++ b/PetLover/style.css
@@ -138,11 +138,11 @@ body{
     background-image: url('./images/carousel-2.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-
     text-align: center;
     padding: 36px;
     height: 50rem;
     width: 95.2%;
+    /* background-blend-mode: darken; */
 }
 .main__heading-items{
    position: relative;
@@ -300,7 +300,7 @@ body{
     justify-content: center;
     flex-flow: wrap;
     margin-top: 148px;
-    
+    padding-bottom: 64px;
 }
 
 
@@ -404,3 +404,114 @@ body{
     font-size: 1.5rem;
     color: #221e1e;
 }
+
+.price__container{
+    border: 2px solid red;
+    background-color: #F2F2F4;
+    margin-top: 72px;
+    height: 900px;
+}
+.price__container-headings{
+    text-align: center;
+    position: relative;
+    top: 94px;
+}
+.price__container-headings h3{
+    font-size: 1.5rem;
+    color: #65C178;
+    line-height: 0.1;
+
+}
+.price__container-headings h1{
+    font-size: 3.5rem;
+    color:#181818;
+}
+.price__container-headings h1 span{
+    color: #ED6436;
+}
+.prices{
+    display: flex;
+    justify-content: space-evenly;
+    border: 2px solid black;
+    margin-top: 200px;
+    height: 500px;
+    
+}
+.price{
+    /* border: 2px solid red; */
+    width: 22%;
+    background-color: white;
+}
+
+.section-1{
+    background-image: url('./images/price-1.jpg');
+}
+.section-2{
+    background-image: url('./images/price-2.jpg');
+}
+.section-3{
+    background-image: url('./images/price-3.jpg');
+}
+.price__section{
+    text-align: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    /* background: (0,0,0,0.5); */
+    /* margin-top: 12px; */
+    height: 212px;
+    /* filter: contrast(60%); */
+    position: relative;
+    top: -28px;
+    
+}
+.price__section h3{
+    font-size: 1.75rem;
+    position: relative;
+    top: 26px;
+    color:#ED6436;
+}
+.section-2 h3{
+    color: #65C178;
+}
+.price__section h1{
+    font-size: 3.5rem;
+    color: #F2F2F4;
+}
+.align__top{
+    font-size: 22px;
+    line-height: 45px;
+    vertical-align: top;
+    color: #F2F2F4;
+}
+.align__bottom{
+    font-size: 16px;
+    line-height: 40px;
+    vertical-align: bottom;
+    color: #F2F2F4;
+}
+
+.price__btn{
+    position: relative;
+    top: 207px;
+    width:100%;
+    border: none;
+    background-color: #ED6436;
+    color: #fff;
+    height: 54px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.price__btn:hover{
+    background-color: #c53f12;
+}
+/* .main__heading{
+    background-image: url('./images/carousel-2.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+    text-align: center;
+    padding: 36px;
+    height: 50rem;
+    width: 95.2%;
+} */
