updates container added

--- a/PetLover/style.css
+++ b/PetLover/style.css
@@ -591,7 +591,9 @@ body{
 
 .client__says-headings{
     text-align: center;
-    margin-top: 92px;
+    /* margin-top: 10px; */
+    top: 102px;
+    position: relative;
 }
 .client__says-headings h3{
     font-size: 1.5rem;
@@ -611,7 +613,7 @@ body{
     display: flex;
     justify-content: center;
     margin-left: 82px;
-    margin-top: 48px;
+    margin-top: 148px;
 }
 .client{
     /* border: 1px solid black; */
@@ -657,4 +659,113 @@ body{
     padding-left: 18px;
     margin-top: 25px;
     color: #777777;
+}
+.updates__container{
+    /* border: 1px solid red; */
+    height: 800px;
+    
+}
+.updates__headings{
+    text-align: center;
+    /* margin-top: 10px; */
+    top: 70px;
+    position: relative;
+}
+.updates__headings h3{
+    font-size: 1.5rem;
+    color: #65C178;
+}
+.updates__headings h1{
+    font-size: 3.5rem;
+    color: #181818;
+    margin-top: 0;
+}
+.updates__headings h1 span{
+    color:#ED6436;
+    
+}
+
+.updates__items {
+    display: flex;
+    justify-content: center;
+    margin-top: 118px;
+    margin-right: 0px;
+    margin-left: 24px;
+}
+.updates__item{
+    width: 23%;
+    height: 475px;
+    /* border: 1px solid red; */
+    background:#F2F2F4;
+    margin-right: 30px;
+}
+.update__image img{
+    width: 100%;
+}
+.update__heading{
+    text-align: center;
+}
+.update__heading h2{
+    font-size: 1.5rem;
+}
+.updates__info ul{
+    display: flex;
+    margin-top: -4px;
+    margin-left: -6px;
+    
+}
+.updates__info li{
+    font-size: 0.8rem;
+    list-style: none;
+    margin-right: 6px;
+    color: #777777;
+}
+.updates__info li i{
+    margin-right: 6px;
+}
+.desc{
+    text-align: left;
+    padding-left: 34px;
+    margin-top: 20px;
+}
+.desc p{
+    font-size: 1rem;
+    color: #777777;
+    line-height: 1.5;
+}
+.updates__info a{
+    position: relative;
+    left: 39px;
+    top: 5px;
+    font-weight: 600;
+    font-size: 1rem;
+    color: #ED6436;
+    text-decoration: none;
+}
+
+.updates__info a:hover{
+    color: #c53f12;
+    text-decoration:underline ;
+}
+
+.footer__items{
+    display: flex;
+    justify-content: space-evenly;
+}
+.footer__container{
+    border: 1px solid red;
+    height: 800px;
+}
+.footer__items{
+    margin-top: 48px;
+}
+
+.footer__item{
+    border:  1px solid red;
+    width: 50%;
+    height: 350px;
+}
+.summary{
+    width: 66%;
+    padding: 36px;
 }
