--- a/Gymnast/style.css
+++ b/Gymnast/style.css
@@ -18,10 +18,6 @@ body{
     position: relative;
     filter: brightness(65%);
 }
-
-.main__header{
-    border: 1px solid red;
-}
 .navbar{
     display: flex;
     justify-content: space-between;
@@ -33,20 +29,39 @@ body{
     font-size: 3.5rem;
     font-family: Oswald,sans-serif;
     margin-bottom: 0;
-    margin-top: 0;
+    margin-top: -11px;
+    margin-left: 16px;
 }
 .navbar__content{
-    width: 40%;
+    width: 44%;
+    margin-right: 22px;
+    background: #111;
+    height: 93px;
+    margin-top: -10px;
 }
 .navbar__items{
-    border: 1px solid white;
     display: flex;
-    /* width: 100%; */
     justify-content: space-around;
     height: 78px;
+    margin-right: 12px;
 }
 .navbar__items li{
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     list-style: none;
-    color: #fff;
+    font-family: Montserrat,sans-serif;
+    margin-right: 29px;
+    margin-top: 16px;
 }
+.navbar__items li a{
+    color: #fff;
+    text-decoration: none;
+}
+.navbar__items li a:hover{
+    cursor: pointer;
+    color: #e31c25;
+    
+}
+#home-item a{
+    color: #e31c25;
+}
+
