--- a/Gymnast/style.css
+++ b/Gymnast/style.css
@@ -6,6 +6,10 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: Montserrat,sans-serif;
+}
+h1,h2,h3,h4,h5,h6{
+    font-family: Oswald,sans-serif;
 }
 .main__background-image{
     background-image:url('./images/carousel-1.jpg') ;
@@ -63,5 +67,38 @@ body{
 }
 #home-item a{
     color: #e31c25;
+}
+.main__headings{
+    /* border: 1px solid blue; */
+    position: relative;
+    bottom: 650px;
+    text-align: center;
+
+}
+.main__headings h3{
+    color: #e31c25;
+    font-size: 1.75rem;
+    margin-bottom: 0;
+}
+.main__headings h1{
+    font-size: 5.5rem;
+    color: #fff;
+    margin-top: 0;
+}
+.main__headings button{
+    width: 15%;
+    height: 74px;
+    margin-top: -30px;
+    font-size: 1.25rem;
+    font-family: Montserrat,sans-serif;
+    background: transparent;
+    color: #fff;
+    border: 2px solid #fff;
+}
+.main__headings button:hover{
+    cursor: pointer;
+    color: #212529;
+    background: #fff;
+    transition-duration: 0.5s;
 }
 
