--- a/Gymnast/style.css
+++ b/Gymnast/style.css
@@ -53,7 +53,7 @@ h1,h2,h3,h4,h5,h6{
     font-size: 1.1rem;
     list-style: none;
     font-family: Montserrat,sans-serif;
-    margin-right: 29px;
+    margin-right: 27px;
     margin-top: 16px;
 }
 .navbar__items li a{
@@ -151,6 +151,34 @@ h1,h2,h3,h4,h5,h6{
     color: #212529;
     background: #fff;
     transition-duration: 0.3s;
+}
+
+.about-cont{
+    display: flex;
+    margin: auto;
+    position: relative;
+    width: 74.5%;
+    bottom: 400px;
+    height: 530px;
+    border: 2px solid red;
+}
+.about-image{
+    height: 100%;
+}
+.about-image img{
+    height: 100%;
+}
+
+.about-desc{
+    padding-left: 20px;
+}
+.about-desc h1{
+    font-size: 3.5rem;
+    font-weight: 700;
+    color: #343a40;
+}
+.achievements{
+    display: flex;
 }
 
 
